# pg_relations_test

./: Cargo.toml
migrations/: 20230608142420_all.sql
src/: main.rs
src/fixtures/: endpoint.sql  javascript_page.sql
