[package]
name = "pg_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive", "serde_derive"] }
sqlx = { version = "0.6.3", features = ["all", "runtime-tokio-rustls"] }
tokio = { version = "1.28.2", features = ["full"] }
